# sway-matiane

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
matiane/: Cargo.toml  build.rs
matiane-core/: Cargo.toml
matiane-core/src/: config.rs  events.rs  lib.rs  log.rs  process.rs  store.rs  xdg.rs
matiane-core/tests/: process.rs  store.rs
matiane/fonts/: icons.toml
matiane/src/: app.rs  config.rs  datefile.rs  icon.rs  main.rs  screen.rs
src/: lib.rs  sway.rs
src/sway/: codec.rs  command.rs  common.rs  connection.rs  packet.rs
sway-matiane/: Cargo.toml
sway-matiane/res/: logo-256x256.icon
sway-matiane/src/: config.rs  lib.rs  main.rs  sway.rs  swayidle.rs  tray.rs
sway-matiane/src/sway/: connection.rs  packet.rs  reply.rs
sway-matiane/tests/: sway.rs  util.rs
tests/: sway.rs  util.rs
