[workspace]
resolver = "3"
members = ["sway-matiane", "matiane-core"]

[workspace.dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
matiane-core = { path = "matiane-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4.4"
tokio-util = { version = "0.7.16", features = ["codec"] }
