[package]
name = "matiane-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
