[package]
name = "sway-matiane"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A Sway based time logger."
homepage = "https://github.com/nodech/sway-matiane"
repository = "https://github.com/nodech/sway-matiane"

[[bin]]
name = "sway-matiane"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes = "1.10.1"
clap = { version = "4.5.43", features = ["cargo"] }
futures = "0.3.31"
matiane-core.workspace = true
serde.workspace = true
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4.4"
tokio-util = { version = "0.7.16", features = ["codec"] }
toml = "0.9.7"

[dev-dependencies]
tempfile = "3.21.0"
tokio-test = "0.4.4"
