[package]
name = "sway-matiane"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A Sway based time logger."
homepage = "https://github.com/nodech/sway-matiane"
repository = "https://github.com/nodech/sway-matiane"

[[bin]]
name = "sway-matiane"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes = "1.10.1"
chrono.workspace = true
clap = { version = "4.5.43", features = ["cargo"] }
futures.workspace = true
log.workspace = true
matiane-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-test.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml = "0.9.7"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4.4"
